[errors] add error output for the players

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 
 <body>
-    Hello world!
+    <div id="alert"></div>
+    <span>Type in a command!</span>
     <input id="player-says" type="text" />
     <script src="//cdn.jsdelivr.net/npm/ramda@0.25/dist/ramda.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/redux/4.0.0/redux.js"></script>
