[scenes] Add second passage to hotel incident

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
             outline: none;
             padding: 10px;
         }
+
+        .fadeInBegin {
+            opacity: 0;
+            transition: all 2s;
+        }
+
+        .fadeInEnd {
+            opacity: 1;
+            transition: all 2s;
+        }
     </style>
 </head>
 
